--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         <img src="http://albumcoverart.files.wordpress.com/2010/04/fleet-foxes-lp.jpg" alt="">
       </div>
       <div class="tile-secondary-content">
-        <h2>Music</h2>
-        <p>Fleet Foxes</p>
+        <h2>Música</h2>
+        <p>Cisne y Los Hermeros</p>
       </div>
     </a>
   </li>
   <li class="tile-job">
     <a href="#">
       <div class="tile-primary-content">
-        <h2>Career</h2>
-        <p>We're looking for consultants and other experts in advertising</p>
+        <h2>Compras</h2>
+        <p>Un sistema de compras que nos conviene</p>
       </div>
       <div class="tile-secondary-content">
         <p>Apply now and become successful</p>
